# Oidos

./: .gitignore  .travis.yml  HISTORY.md  LICENSE.md  README.md  create_mac_bundles.sh  makedist.sh
.cargo/: config
convert/: .gitignore  OidosConvert.py  OidosUpgrade.py  XML.py  oidosconvert.py  oidosupgrade.py  oidosxml.py  py2exe_setup.py
easy_elf/: build.sh  readme.txt
easy_exe/: .gitignore  build.bat  build.sh  crinkler_options.txt  music.txt  readme.txt  wav_filename.txt
lua/: oidos.lua  oidos_reverb.lua
player/: dump_wav.c  oidos.asm  oidos.h  oidos.inc  platform.inc  play.asm  play.c  random.asm
reverb/: Cargo.toml
reverb/src/: lib.rs
rust_example/: Cargo.toml  build.rs
rust_example/src/: main.rs
synth/: Cargo.toml  build.rs
synth/src/: additive.asm  cache.rs  generate.rs  lib.rs  oidos_generate.rs  synth.rs
