[package]
name = "Oidos"
version = "2.1.0"
authors = ["Aske Simon Christensen <blueberry@loonies.dk>"]
build = "build.rs"

[dependencies]
vst2 = { git = "https://github.com/askeksa/rust-vst2", branch = "string_success" }
rand = "0.3"

[build-dependencies]
nasm-rs = { git = "https://github.com/askeksa/nasm-rs" }

[lib]
name = "Oidos"
crate-type = ["cdylib"]
