[package]
name = "Oidos"
version = "2.1.0"
authors = ["Aske Simon Christensen <blueberry@loonies.dk>"]
build = "build.rs"

[dependencies]
vst = { git = "https://github.com/askeksa/rust-vst", branch = "thread_safe_plugin" }
rand = "0.3"

[build-dependencies]
nasm-rs = "0.1.3"

[lib]
name = "Oidos"
crate-type = ["cdylib"]
